# hermes-rust-win

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EVALUATION_REPORT.md  LICENSE  README.md  ROADMAP.md  TEST_REPORT.md  clippy.toml  deny.toml  install.ps1  install.sh  rust-toolchain.toml  rustfmt.toml  test_auth.rs  test_env.rs  test_yaml.rs
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  format.yml  release.yml
.sisyphus/plans/: core-runtime.md  production-ready-v1.md
benchmarks/: bench.sh  microbench.rs
crates/cli/: Cargo.toml
crates/cli-core/: Cargo.toml
crates/cli-core/src/: auth.rs  commands.rs  config.rs  credential_pool.rs  cron.rs  error.rs  gateway.rs  lib.rs  mcp.rs  pairings.rs  plugins.rs  profiles.rs  skills.rs  skills_store.rs  tools.rs  webhooks.rs
crates/cli/src/: main.rs
crates/cli/tests/: smoke.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  model_metadata.rs  model_router.rs  provider.rs  string.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: error.rs  lib.rs  usage.rs
crates/runtime/src/agent/: budget.rs  mod.rs
crates/runtime/src/chat/: mod.rs
crates/runtime/src/context/: mod.rs  prompt_builder.rs  token_est.rs  tokenizer.rs
crates/runtime/src/display/: mod.rs
crates/runtime/src/gateway/: mod.rs  qq.rs  wechat.rs
crates/runtime/src/provider/: anthropic.rs  caching.rs  gemini.rs  groq.rs  mod.rs  openai.rs  openai_compatible.rs  providers.rs  retry.rs
crates/runtime/src/tool/: browser.rs  coercion.rs  file.rs  mcp.rs  mod.rs  terminal.rs  web.rs
crates/runtime/tests/: anthropic_mock.rs  openai_mock.rs  provider_factory.rs
crates/session-db/: Cargo.toml
crates/session-db/src/: error.rs  fts.rs  lib.rs  models.rs  store.rs  token_store.rs
docs/: demo.tape
docs/plans/: 2026-04-24-streaming-tool-calls.md
docs/promote/: chinese.md  good-first-issues.md  hn-show.md  reddit-chatgptcoding.md  reddit-localllama.md  reddit-rust.md  twitter-thread.md
test_home/: credentials.yaml
