[package]
name = "hermes-cli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex-lite = "0.1"
uuid = { version = "1.0", features = ["v4"] }
hermes-runtime = { path = "../runtime" }
hermes-session-db = { path = "../session-db" }
hermes-common = { workspace = true }
clap_complete = "4"

[dev-dependencies]
tokio-test = "0.4"
