[package]
name = "hermes-agent-cli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex-lite = "0.1"
uuid = { version = "1.0", features = ["v4"] }
hermes-agent-runtime = { workspace = true }
hermes-session-db = { workspace = true }
hermes-common = { workspace = true }
clap_complete = "4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
