[package]
name = "hermes-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
hermes-common = { workspace = true }
hermes-session-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures = { workspace = true }
# async-trait removed - using Rust 1.75+ native async fn in traits
regex = "1.11"
urlencoding = "2.1"
tiktoken-rs = "0.5"

[dev-dependencies]
wiremock = "0.6"
